cmd/manifests/kubernetes/qdrant/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  labels:
    app: qdrant
    component: database
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6333
      targetPort: 6333
      protocol: TCP
    - name: grpc
      port: 6334
      targetPort: 6334
      protocol: TCP
    - name: p2p
      port: 6335
      targetPort: 6335
      protocol: TCP
  selector:
    app: qdrant
    component: database
