cmd/manifests/kubernetes/qdrant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant
  labels:
    app: qdrant
    component: database
spec:
  rules:
    - host: qdrant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qdrant
                port:
                  number: 6333
